src/test/resources/org/nest/nestml/_cocos/invalid/illegalVarInFor.simple
module org.nest.spl._cocos.illegalVarInFor
x boolean
for x in 1 ... 5 step 1:

end

xx real
for xx in "Bob" ... 5 step 1:

end

for xx in 1 ... true step 1:

end